--- a/AffordAboard/app/src/main/res/values/colors.xml
+++ b/AffordAboard/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryPurple">#A3A3F3</color>
+    <color name="secondaryPurple">#7777ef</color>
 </resources>
