--- a/AffordAboard/app/src/main/res/layout/activity_feed.xml
+++ b/AffordAboard/app/src/main/res/layout/activity_feed.xml
@@ -26,32 +26,48 @@
 
         <ImageButton
             android:id="@+id/profileButton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
             android:src="@drawable/ic_profile" />
 
         <ImageButton
             android:id="@+id/feedButton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
             android:src="@drawable/ic_people" />
 
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
         <ImageButton
             android:id="@+id/historyButton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
             android:src="@drawable/ic_watch" />
 
         <ImageButton
             android:id="@+id/settingsButton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
             android:src="@drawable/ic_settings" />
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/addJourneyButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/circle_background"
+        android:src="@drawable/ic_plus"
+        app:layout_constraintBottom_toBottomOf="@+id/feedRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
