--- a/AffordAboard/app/src/main/res/layout/activity_new_adventure.xml
+++ b/AffordAboard/app/src/main/res/layout/activity_new_adventure.xml
@@ -6,16 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".newAdventure">
 
-
-    <!-- Departure Spinner Hint -->
     <TextView
         android:id="@+id/text_departure_hint"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Departure Country/City"
         android:textColorHint="@android:color/darker_gray"
         android:textSize="16sp"
         android:padding="8dp"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +22,6 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp" />
 
-    <!-- Departure Spinner -->
     <Spinner
         android:id="@+id/spinner_departure"
         android:layout_width="0dp"
@@ -36,7 +34,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_departure_hint" />
 
-    <!-- Destination Spinner Hint -->
     <TextView
         android:id="@+id/text_destination_hint"
         android:layout_width="0dp"
@@ -50,9 +47,9 @@
         app:layout_constraintTop_toBottomOf="@id/spinner_departure"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:textColor="#FFFFFF"/>
 
-    <!-- Destination Spinner -->
     <Spinner
         android:id="@+id/spinner_destination"
         android:layout_width="0dp"
@@ -63,55 +60,59 @@
         android:entries="@array/countries_array"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/text_destination_hint" />
+        app:layout_constraintTop_toBottomOf="@id/text_destination_hint"
+        android:textColor="#FFFFFF"/>
 
-    <!-- Departure Date -->
     <EditText
         android:id="@+id/edit_departure_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:hint="Departure Date"
+        android:background="@drawable/edit_text_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinner_destination" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_destination"
+        android:textColor="#FFFFFF"/>
 
-    <!-- Returning Date -->
     <EditText
         android:id="@+id/edit_returning_date"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Returning Date"
+        android:background="@drawable/edit_text_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_departure_date"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:textColor="#FFFFFF"/>
 
-    <!-- Number of Adult Travelers -->
     <EditText
         android:id="@+id/edit_adult_travelers"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:hint="Number of Adult Travelers"
+        android:background="@drawable/edit_text_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_returning_date"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:textColor="#FFFFFF"/>
 
-    <!-- Number of Children Travelers -->
     <EditText
         android:id="@+id/edit_children_travelers"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:hint="Number of Children Travelers"
+        android:background="@drawable/edit_text_background"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edit_adult_travelers"
-        android:layout_margin="16dp" />
+        android:layout_margin="16dp"
+        android:textColor="#FFFFFF"/>
 
-    <!-- Proposed Budget -->
     <EditText
         android:id="@+id/edit_budget"
         android:layout_width="0dp"
@@ -119,37 +120,10 @@
         android:layout_margin="16dp"
         android:hint="Budget"
         android:inputType="numberDecimal"
+        android:background="@drawable/edit_text_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_children_travelers" />
-    <!-- Next Page Button -->
-
-    <!-- Previous Page Button -->
-
-    <Button
-        android:id="@+id/btn_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:onClick="letsGo"
-        android:text="Let's go!"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.803"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/edit_budget" />
-
-    <Button
-        android:id="@+id/btn_previous"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="59dp"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="83dp"
-        android:onClick="back"
-        android:text="Back"
-        app:layout_constraintEnd_toStartOf="@+id/btn_next"
-        app:layout_constraintHorizontal_bias="0.52"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edit_budget" />
+        app:layout_constraintTop_toBottomOf="@id/edit_children_travelers"
+        android:textColor="#FFFFFF"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
