--- a/AffordAboard/app/src/main/res/layout/activity_profile.xml
+++ b/AffordAboard/app/src/main/res/layout/activity_profile.xml
@@ -72,16 +72,17 @@
 
     <LinearLayout
         android:id="@+id/infoLayout"
-        android:layout_width="match_parent"
+        android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
 
         android:layout_marginTop="16dp"
+        android:background="@drawable/rounded_purple_button"
         android:orientation="vertical"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile"
         android:padding="16dp"
-        android:background="@color/secondaryPurple">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewProfile">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,10 +101,10 @@
                 android:id="@+id/textViewCurrentLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:text="Ljubljana, Slovenia"
                 android:textColor="@color/white"
-                android:textSize="16sp"
-                android:layout_marginStart="10dp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -123,10 +124,10 @@
                 android:id="@+id/textViewAge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:text="20"
                 android:textColor="@color/white"
-                android:textSize="16sp"
-                android:layout_marginStart="10dp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -146,10 +147,10 @@
                 android:id="@+id/textViewType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:text="Very active"
                 android:textColor="@color/white"
-                android:textSize="16sp"
-                android:layout_marginStart="10dp" />
+                android:textSize="16sp" />
         </LinearLayout>
 
     </LinearLayout>
@@ -166,96 +167,67 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/textViewUpcomingPlans"
+            android:id="@+id/textcheViewType"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Upcoming Plans:"
+            android:layout_marginStart="10dp"
+            android:text="Upcoming journeys:"
             android:textColor="@color/white"
-            android:textSize="18sp" />
+            android:textSize="16sp" />
 
-        <View
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/profileRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="5dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/textViewUpcomingPlans"
-            android:background="#000000" />
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
             android:padding="10dp"
-            android:background="@color/secondaryPurple">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/profileIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_profile"
-                    android:layout_marginEnd="10dp" />
-
-                <TextView
-                    android:id="@+id/userName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Anja Kuzevska"
-                    android:textColor="#FFFFFF"
-                    android:textSize="16sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/travelIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_travel"
-                    android:layout_marginEnd="10dp" />
-
-                <TextView
-                    android:id="@+id/travelLocation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="New Jersey"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/calendarIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_calendar"
-                    android:layout_marginEnd="10dp" />
-
-                <TextView
-                    android:id="@+id/travelDates"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="18.6.2023 - 27.9.2023"
-                    android:textColor="#FFFFFF"
-                    android:textSize="14sp" />
-            </LinearLayout>
-        </LinearLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/navigationBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:orientation="horizontal"
+        android:background="@color/secondaryPurple"
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <ImageButton
+            android:id="@+id/profileButton"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:background="@null"
+            android:src="@drawable/ic_profile" />
+
+        <ImageButton
+            android:id="@+id/feedButton"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:background="@null"
+            android:src="@drawable/ic_people" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+        <ImageButton
+            android:id="@+id/historyButton"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:background="@null"
+            android:src="@drawable/ic_watch" />
+
+        <ImageButton
+            android:id="@+id/settingsButton"
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:background="@null"
+            android:src="@drawable/ic_settings" />
+
+    </LinearLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
