--- a/AffordAboard/app/src/main/res/layout/activity_recommendations.xml
+++ b/AffordAboard/app/src/main/res/layout/activity_recommendations.xml
@@ -6,7 +6,7 @@
     android:background="#A3A3F3">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/historyRecyclerView"
+        android:id="@+id/recRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
@@ -26,14 +26,14 @@
 
         <ImageButton
             android:id="@+id/profileButton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
             android:src="@drawable/ic_profile" />
 
         <ImageButton
             android:id="@+id/feedButton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
             android:src="@drawable/ic_people" />
@@ -44,19 +44,30 @@
             android:layout_weight="1" />
 
         <ImageButton
-            android:id="@+id/historyButton"
-            android:layout_width="100dp"
+            android:id="@+id/recommendationsButton"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
-            android:src="@drawable/ic_watch" />
+            android:src="@drawable/ic_flight" />
 
         <ImageButton
             android:id="@+id/settingsButton"
-            android:layout_width="100dp"
+            android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
             android:src="@drawable/ic_settings" />
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/addJourneyButton"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/circle_background"
+        android:src="@drawable/ic_plus"
+        app:layout_constraintBottom_toBottomOf="@+id/recRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
