--- a/AffordAboard/app/src/main/res/layout/activity_profile.xml
+++ b/AffordAboard/app/src/main/res/layout/activity_profile.xml
@@ -26,7 +26,7 @@
         android:layout_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/profilna" />
+        app:srcCompat="@drawable/uste_podobra_profilna" />
 
     <TextView
         android:id="@+id/textViewName"
