Added transitions and green nav indicators.

--- a/AffordAboard/app/src/main/res/layout/activity_profile.xml
+++ b/AffordAboard/app/src/main/res/layout/activity_profile.xml
@@ -201,7 +201,7 @@
             android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
-            android:src="@drawable/ic_profile" />
+            android:src="@drawable/ic_profile_green" />
 
         <ImageButton
             android:id="@+id/feedButton"
