--- a/AffordAboard/app/src/main/res/layout/activity_feed.xml
+++ b/AffordAboard/app/src/main/res/layout/activity_feed.xml
@@ -5,11 +5,25 @@
     android:layout_height="match_parent"
     android:background="#A3A3F3">
 
+    <TextView
+        android:id="@+id/textViewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upcoming plans:"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/feedRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="10dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -36,7 +50,7 @@
             android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
-            android:src="@drawable/ic_people" />
+            android:src="@drawable/ic_people_green" />
 
         <Space
             android:layout_width="0dp"
