--- a/AffordAboard/app/src/main/res/layout/activity_recommendations.xml
+++ b/AffordAboard/app/src/main/res/layout/activity_recommendations.xml
@@ -48,7 +48,7 @@
             android:layout_width="90dp"
             android:layout_height="50dp"
             android:background="@null"
-            android:src="@drawable/ic_flight" />
+            android:src="@drawable/ic_flight_green" />
 
         <ImageButton
             android:id="@+id/settingsButton"
