--- a/AffordAboard/app/src/main/res/values/colors.xml
+++ b/AffordAboard/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="primaryPurple">#A3A3F3</color>
     <color name="secondaryPurple">#7777ef</color>
+    <color name="selectedGreen">#028A0F</color>
 </resources>
