--- a/AffordAboard/app/src/main/res/layout/activity_signup.xml
+++ b/AffordAboard/app/src/main/res/layout/activity_signup.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="140dp"
         android:layout_marginEnd="50dp"
         android:background="@drawable/rounded_grey_button"
-        android:hint="Username"
+        android:hint="FirstName LastName"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
